[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://Scene/MonsterBlood/monster_blood_bar.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b3wuy45u4732i" path="res://Art/blood/BloodEmpty.png" id="2"]
[ext_resource type="FontFile" uid="uid://mq0cfa3t1vbr" path="res://Font/8_FZCuYuan-M03S.ttf" id="3"]
[ext_resource type="Shader" path="res://Shader/LevelButton.gdshader" id="4"]
[ext_resource type="Texture2D" uid="uid://ch1ginwccjfce" path="res://Art/blood/wk.png" id="5"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource( "4" )
shader_parameter/line_color = Color(0, 0, 0, 1)
shader_parameter/line_thickness = 1.408
script = null

[node name="monster_blood_bar" type="Node2D"]
position = Vector2(0, 8)
scale = Vector2(0.35, 0.15)
script = ExtResource( "1" )

[node name="blood_bar" type="TextureProgressBar" parent="."]
offset_right = 70.0
offset_bottom = 8.0
scale = Vector2(2.28, 4)
max_value = 1.0
step = 0.0
value = 0.55
nine_patch_stretch = true
texture_progress = ExtResource( "2" )
tint_under = Color(1, 1, 1, 0.223529)
tint_progress = Color(1, 0, 0, 1)

[node name="blood_bar2" type="TextureProgressBar" parent="blood_bar"]
show_behind_parent = true
layout_mode = 0
offset_right = 70.0
offset_bottom = 8.0
max_value = 1.0
step = 0.0
value = 1.0
nine_patch_stretch = true
texture_progress = ExtResource( "2" )
tint_under = Color(1, 1, 1, 0.223529)
tint_progress = Color(0.454902, 0, 0, 1)

[node name="blood_text" type="Label" parent="blood_bar"]
layout_mode = 0
offset_top = -2.0
offset_right = 70.0
offset_bottom = 18.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="queue_free_Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Wk" type="Sprite2D" parent="."]
material = SubResource( "1" )
position = Vector2(80, 16.6667)
scale = Vector2(1.05171, 1.33333)
texture = ExtResource( "5" )

[connection signal="timeout" from="queue_free_Timer" to="." method="_on_timer_timeout" flags=18]
